--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -4,4 +4,9 @@
         android:id="@+id/countersFragment"
         android:title="@string/nav_counters"
         android:icon="@drawable/counters" />
+
+    <item
+        android:id="@+id/beverageDatabaseFragment"
+        android:title="@string/nav_beverage_database"
+        android:icon="@drawable/beverage_database" />
 </menu>
