--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -10,4 +10,10 @@
         android:name="cz.johnyapps.cheers.fragments.CountersFragment"
         android:label="@string/nav_counters"
         tools:layout="@layout/fragment_counters" />
+
+    <fragment
+        android:id="@+id/beverageDatabaseFragment"
+        android:name="cz.johnyapps.cheers.fragments.BeverageDatabaseFragment"
+        android:label="@string/nav_beverage_database"
+        tools:layout="@layout/fragment_beverage_database" />
 </navigation>
