--- a/app/src/main/res/menu/beverages_menu.xml
+++ b/app/src/main/res/menu/beverages_menu.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/addCounterMenuItem"
-        android:title="@string/add_counter_menu_item"
+        android:id="@+id/addBeverageMenuItem"
+        android:title="@string/add_beverage_menu_item"
         app:showAsAction="ifRoom"
         android:icon="@drawable/add" />
 </menu>
