--- a/app/src/main/res/menu/selected_counter_menu.xml
+++ b/app/src/main/res/menu/selected_counter_menu.xml
@@ -3,6 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/selectAllMenuItem"
+        android:title="@string/select_all_menu_item"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/select_all" />
+
+    <item
         android:id="@+id/stopCounterMenuItem"
         android:title="@string/stop_counter_menu_item"
         app:showAsAction="ifRoom"
