Beverage category images adapted for dark mode

--- a/app/src/main/res/drawable/wine.xml
+++ b/app/src/main/res/drawable/wine.xml
@@ -5,22 +5,30 @@
     android:viewportWidth="200"
     android:viewportHeight="200">
   <path
-      android:pathData="m95.599,106.417v62.567h-0.001c0,0 -1.585,6.099 -24.584,6.099 -5.825,0 -5.667,4.916 -5.667,4.916h69.451c0,0 -0.018,-4.916 -5.667,-4.916 -24.961,0 -24.424,-6.099 -24.424,-6.099h-0.001v-62.567z"
+      android:pathData="m70.024,20c0,0 -18.727,60.724 0,79.45 6.145,6.145 15.611,9.616 25.509,10.417l0,0.011l9.245,0l0,-0.038c9.785,-0.848 19.118,-4.309 25.199,-10.389 18.727,-18.727 0,-79.45 0,-79.45zM74.039,26.032L125.96,26.032c0,0 16.218,52.589 0,68.807 -12.238,12.238 -39.683,12.238 -51.921,0 -16.218,-16.218 0,-68.807 0,-68.807z"
+      android:strokeAlpha="0"
       android:strokeLineJoin="round"
-      android:strokeWidth="2.27589"
-      android:fillColor="#000000"
+      android:strokeWidth="0"
+      android:fillColor="#ffffff"
+      android:strokeColor="#fcffff"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="m66.421,65.493c-0.599,11.767 0.852,23.223 7.153,29.372 12.355,12.056 40.064,12.056 52.419,0 6.301,-6.149 7.752,-17.604 7.153,-29.372z"
+      android:pathData="m95.113,107.955c0.203,0.019 0.405,0.038 0.609,0.054l0,58.774l-0.001,0c0,0 -1.541,5.93 -23.902,5.93 -5.664,0 -5.51,4.78 -5.51,4.78l67.525,0c0,0 -0.018,-4.78 -5.51,-4.78 -24.269,0 -23.747,-5.93 -23.747,-5.93l-0.001,0L104.577,107.983c0.098,-0.008 0.196,-0.019 0.294,-0.028z"
       android:strokeLineJoin="round"
-      android:strokeWidth="2.13424"
+      android:strokeWidth="5"
+      android:fillColor="#000000"
+      android:strokeColor="#fffffe"/>
+  <path
+      android:pathData="m67.353,66.163c-0.582,11.441 0.828,22.579 6.954,28.557 12.013,11.722 38.953,11.722 50.965,0 6.126,-5.978 7.537,-17.116 6.954,-28.557z"
+      android:strokeLineJoin="round"
+      android:strokeWidth="0"
       android:fillType="nonZero"
       android:strokeLineCap="round">
     <aapt:attr name="android:fillColor">
       <gradient 
-          android:gradientRadius="32.597416"
-          android:centerX="99.78383"
-          android:centerY="84.700356"
+          android:gradientRadius="31.693277"
+          android:centerX="99.789734"
+          android:centerY="84.83718"
           android:type="radial"
           android:tileMode="clamp">
         <item android:offset="0" android:color="#FFD40000"/>
@@ -29,9 +37,18 @@
     </aapt:attr>
   </path>
   <path
-      android:pathData="m70.468,20c0,0 -18.449,59.822 0,78.271 13.921,13.921 45.142,13.921 59.063,0 18.449,-18.449 0,-78.271 0,-78.271zM74.424,25.942h51.151c0,0 15.977,51.808 0,67.786 -12.056,12.056 -39.095,12.056 -51.151,0 -15.977,-15.977 0,-67.786 0,-67.786z"
+      android:pathData="m71.288,21.931c0,0 -17.937,58.163 0,76.1 5.886,5.886 14.953,9.211 24.434,9.978l0,58.774l-0.001,0c0,0 -1.541,5.93 -23.902,5.93 -5.664,0 -5.51,4.78 -5.51,4.78l67.525,0c0,0 -0.018,-4.78 -5.51,-4.78 -24.269,0 -23.746,-5.93 -23.746,-5.93l-0.001,0l0,-58.801c9.373,-0.812 18.312,-4.127 24.136,-9.952 17.937,-17.937 0,-76.1 0,-76.1zM75.134,27.709l49.732,0c0,0 15.534,50.371 0,65.905 -11.722,11.722 -38.01,11.722 -49.732,0 -15.534,-15.534 0,-65.905 0,-65.905z"
+      android:strokeAlpha="0"
       android:strokeLineJoin="round"
-      android:strokeWidth="2.43445"
+      android:strokeWidth="0"
       android:fillColor="#000000"
+      android:strokeColor="#fcffff"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="m75.134,27.709c0,0 -15.534,50.371 0,65.905 11.722,11.722 38.01,11.722 49.732,0 15.534,-15.534 0,-65.905 0,-65.905z"
+      android:strokeAlpha="0.12"
+      android:strokeWidth="0"
+      android:fillColor="#00ffff"
+      android:fillAlpha="0.12"
       android:strokeLineCap="round"/>
 </vector>
