--- a/app/src/main/res/drawable/shot.xml
+++ b/app/src/main/res/drawable/shot.xml
@@ -5,16 +5,32 @@
     android:viewportWidth="200"
     android:viewportHeight="200">
   <path
-      android:pathData="m44.209,64.569 l18.853,94.62h73.876l18.853,-94.62z"
+      android:pathData="m40.076,39.736 l20.151,86.592c10.188,28.474 72.542,28.878 79.758,-1.57 0.563,-2.375 0.919,-3.67 1.112,-4.127l18.825,-80.896z"
+      android:strokeAlpha="0"
+      android:strokeWidth="7.43099"
+      android:fillColor="#00ffff"
+      android:strokeColor="#00000000"
+      android:fillAlpha="0.12"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="m20,23.188 l1.95,8.38 33.8,145.244L144.25,176.812L180,23.188ZM37.209,36.852L162.791,36.852l-19.726,84.767c-0.203,0.478 -0.576,1.835 -1.166,4.324 -7.561,31.904 -72.899,31.481 -83.574,1.645z"
+      android:strokeLineJoin="miter"
+      android:strokeWidth="0"
+      android:fillColor="#ffffff"
+      android:strokeColor="#00000000"
+      android:fillType="nonZero"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M44.038,64.461 L62.949,159.371L137.051,159.371L155.962,64.461Z"
       android:strokeLineJoin="round"
-      android:strokeWidth="13"
+      android:strokeWidth="12.9159"
       android:strokeColor="#00000000"
       android:strokeLineCap="round">
     <aapt:attr name="android:fillColor">
       <gradient 
-          android:gradientRadius="147.45038"
-          android:centerX="102.405426"
-          android:centerY="110.15418"
+          android:gradientRadius="147.90247"
+          android:centerX="102.41266"
+          android:centerY="110.18546"
           android:type="radial">
         <item android:offset="0" android:color="#FFC87137"/>
         <item android:offset="1" android:color="#FFFFCC00"/>
@@ -22,17 +38,11 @@
     </aapt:attr>
   </path>
   <path
-      android:pathData="M32.074,33.419 L63.062,166.581h73.876L167.926,33.419Z"
+      android:pathData="m23.653,26.696 l1.861,7.997 32.257,138.611L142.229,173.304L176.347,26.696ZM40.076,39.736L159.923,39.736l-18.825,80.896c-0.194,0.456 -0.549,1.752 -1.112,4.127 -7.216,30.447 -69.57,30.044 -79.758,1.57z"
       android:strokeLineJoin="miter"
-      android:strokeWidth="12.99999986"
-      android:fillColor="#00000000"
-      android:strokeColor="#000000"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="m59.417,122.877c0.055,0.277 0.115,0.552 0.179,0.824 7.247,30.885 72.865,32.218 80.268,0.981 4.75,-20.042 -5.136,36.276 -5.136,36.276H63.062c0,0 -8.481,-62.384 -3.645,-38.081z"
-      android:strokeLineJoin="miter"
-      android:strokeWidth="0.507747"
+      android:strokeWidth="0"
       android:fillColor="#000000"
       android:strokeColor="#00000000"
-      android:strokeLineCap="butt"/>
+      android:fillType="nonZero"
+      android:strokeLineCap="round"/>
 </vector>
