--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -14,4 +14,9 @@
         android:id="@+id/beverageDatabaseFragment"
         android:title="@string/nav_beverage_database"
         android:icon="@drawable/beverage_database" />
+
+    <item
+        android:id="@+id/aboutAppMenuItem"
+        android:title="@string/nav_about_app"
+        android:icon="@drawable/about_app" />
 </menu>
