--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,12 +5,14 @@
     <color name="light_colorSecondary">#03DAC5</color>
     <color name="light_colorSecondaryVariant">#018786</color>
     <color name="light_colorSecondaryTransparent">#5503DAC5</color>
+    <color name="light_colorOnSurfaceDisabled">#6A6A6A</color>
 
     <color name="dark_colorPrimary">#B17000</color>
     <color name="dark_colorPrimaryVariant">#D68800</color>
     <color name="dark_colorSecondary">#03DAC5</color>
     <color name="dark_colorSecondaryVariant">#018786</color>
     <color name="dark_colorSecondaryTransparent">#5503DAC5</color>
+    <color name="dark_colorOnSurfaceDisabled">#AAAAAA</color>
 
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
