--- a/app/src/main/res/layout/item_beverage.xml
+++ b/app/src/main/res/layout/item_beverage.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clickable="true"
     android:focusable="true"
+    android:orientation="vertical"
+    android:animateLayoutChanges="true"
     android:background="?selectableItemBackground">
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -14,8 +16,22 @@
         android:textAppearance="@style/TextAppearance.Cheers.Medium" />
 
     <LinearLayout
+        android:id="@+id/descriptionLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="?spacingDefault"
+        android:visibility="gone"
+        android:background="?colorSurface">
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/descriptionTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/TextAppearance.Cheers.Small" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_below="@+id/nameTextView"
         android:background="?colorOnSurface" />
-</RelativeLayout>
+</LinearLayout>
