Values in GraphView are now clickable

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -18,5 +18,7 @@
     <declare-styleable name="GraphView">
         <attr name="debug" format="boolean" />
         <attr name="valueSuffix" format="string" />
+        <attr name="valueSize" format="dimension" />
+        <attr name="lineWidth" format="dimension" />
     </declare-styleable>
 </resources>
