--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -11,5 +11,30 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:valueSuffix="@string/milliliter"
+        android:layout_marginBottom="?spacingDefault"
+        android:layout_above="@id/valueEditLayout"
         android:padding="?spacingDefault" />
-</LinearLayout>
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/valueEditLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical"
+        android:padding="?spacingDefault">
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/beverageNameTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="?spacingDefault"
+            android:textAppearance="@style/TextAppearance.Cheers.Small" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/timeTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/TextAppearance.Cheers.Large"
+            android:gravity="center" />
+    </androidx.appcompat.widget.LinearLayoutCompat>
+</RelativeLayout>
