--- a/app/src/main/res/menu/selected_counter_menu.xml
+++ b/app/src/main/res/menu/selected_counter_menu.xml
@@ -18,5 +18,5 @@
         android:id="@+id/deleteCounterMenuItem"
         android:title="@string/delete_counter_menu_item"
         app:showAsAction="ifRoom"
-        android:icon="@drawable/delete_counter" />
+        android:icon="@drawable/delete" />
 </menu>
