--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,8 +7,30 @@
     android:id="@+id/main_drawer"
     tools:context=".activities.MainActivity">
 
-    <include
-        layout="@layout/content_main" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:title="@string/app_name"
+            android:elevation="4dp"
+            app:titleTextColor="?colorOnToolbar"
+            app:contentInsetStartWithNavigation="0dp"
+            app:subtitleTextColor="?colorOnToolbar"
+            android:background="?colorToolbar" />
+
+        <fragment
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            android:id="@+id/nav_host_fragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:defaultNavHost="true"
+            android:layout_below="@id/toolbar"
+            app:navGraph="@navigation/nav_graph" />
+    </RelativeLayout>
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
