--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -24,4 +24,9 @@
         android:id="@+id/aboutAppMenuItem"
         android:title="@string/nav_about_app"
         android:icon="@drawable/about_app" />
+
+    <item
+        android:id="@+id/beverageDatabaseFragmentNew"
+        android:title="@string/nav_beverage_database"
+        android:icon="@drawable/beverage_database" />
 </menu>
