--- a/app/src/main/res/layout/item_beverage.xml
+++ b/app/src/main/res/layout/item_beverage.xml
@@ -1,37 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:clickable="true"
-    android:focusable="true"
-    android:orientation="vertical"
-    android:animateLayoutChanges="true"
-    android:background="?selectableItemBackground">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/nameTextView"
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:textAppearance="@style/TextAppearance.Cheers.Medium" />
-
-    <LinearLayout
-        android:id="@+id/descriptionLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="?spacingDefault"
-        android:visibility="gone"
-        android:background="?colorSurface">
+        android:clickable="true"
+        android:focusable="true"
+        android:orientation="vertical"
+        android:animateLayoutChanges="true"
+        android:background="?selectableItemBackground">
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/descriptionTextView"
+            android:id="@+id/nameTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="@style/TextAppearance.Cheers.Small" />
-    </LinearLayout>
+            android:padding="20dp"
+            android:text="@{beverage.name}"
+            android:textAppearance="@style/TextAppearance.Cheers.Medium" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="?colorOnSurface" />
-</LinearLayout>
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/descriptionLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="?spacingDefault"
+            android:visibility="gone"
+            android:background="?colorSurface">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/descriptionTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/description_text_view_loading"
+                android:textAppearance="@style/TextAppearance.Cheers.Small" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="?colorOnSurface" />
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
+    <data>
+        <import type="android.view.View" />
+
+        <variable
+            name="beverage"
+            type="cz.johnyapps.cheers.entities.beverage.Beverage" />
+
+        <variable
+            name="expanded"
+            type="Boolean" />
+    </data>
+</layout>
