--- a/app/src/main/res/layout/item_counter.xml
+++ b/app/src/main/res/layout/item_counter.xml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:animateLayoutChanges="true">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <cz.johnyapps.cheers.views.CounterView
-        android:id="@+id/counterView"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-</LinearLayout>
+        android:layout_height="wrap_content">
+
+        <cz.johnyapps.cheers.views.CounterView
+            android:id="@+id/counterView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:counterWithBeverage="@{counterWithBeverage}"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <data>
+        <variable
+            name="counterWithBeverage"
+            type="cz.johnyapps.cheers.entities.CounterWithBeverage" />
+    </data>
+</layout>
