--- a/app/src/main/res/layout/fragment_counters.xml
+++ b/app/src/main/res/layout/fragment_counters.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <cz.johnyapps.cheers.views.EmptyMessageRecyclerView
-        android:id="@+id/countersRecyclerView"
-        app:emptyMessage="@string/counter_recycler_view_empty_message"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-</LinearLayout>
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/countersRecyclerView"
+            app:emptyMessage="@string/counter_recycler_view_empty_message"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <data>
+        <variable
+            name="viewModel"
+            type="cz.johnyapps.cheers.viewmodels.CountersViewModel" />
+    </data>
+</layout>
