--- a/app/src/main/res/layout/fragment_beverage_category.xml
+++ b/app/src/main/res/layout/fragment_beverage_category.xml
@@ -1,42 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<cz.johnyapps.cheers.views.CustomCoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/beverageCategoryImageView"
+        <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="?spacingDefault"
-            android:scaleType="fitCenter"
-            app:srcCompat="@drawable/beer" />
+            android:orientation="vertical">
 
-        <View
-            android:id="@+id/bottomSpace"
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/beverageCategoryImageView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="?spacingDefault"
+                android:scaleType="fitCenter"
+                app:srcCompat="@drawable/beer" />
+
+            <View
+                android:id="@+id/bottomSpace"
+                android:layout_width="match_parent"
+                android:layout_height="0dp" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <FrameLayout
+            android:id="@+id/bottomSheet"
             android:layout_width="match_parent"
-            android:layout_height="0dp" />
-    </LinearLayout>
+            android:layout_height="match_parent"
+            android:background="?colorSurface"
+            app:behavior_fitToContents="false"
+            app:behavior_hideable="false"
+            app:behavior_skipCollapsed="true"
+            app:layout_behavior="@string/bottom_sheet_behavior">
 
-    <FrameLayout
-        android:id="@+id/bottomSheet"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="?colorSurface"
-        app:behavior_fitToContents="false"
-        app:behavior_hideable="false"
-        app:behavior_skipCollapsed="true"
-        app:layout_behavior="@string/bottom_sheet_behavior">
-
-        <cz.johnyapps.cheers.views.EmptyMessageRecyclerView
-            android:id="@+id/countersRecyclerView"
-            app:emptyMessage="@string/counter_recycler_view_empty_message"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </FrameLayout>
-</cz.johnyapps.cheers.views.CustomCoordinatorLayout>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/countersRecyclerView"
+                app:emptyMessage="@string/counter_recycler_view_empty_message"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </FrameLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+</layout>
