EmptyMessageRecyclerView.java replaced with kotlin variant

--- a/app/src/main/res/layout/fragment_counters.xml
+++ b/app/src/main/res/layout/fragment_counters.xml
@@ -5,7 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.recyclerview.widget.RecyclerView
+        <cz.johnyapps.cheers.views.EmptyMessageRecyclerView
             android:id="@+id/countersRecyclerView"
             app:emptyMessage="@string/counter_recycler_view_empty_message"
             android:layout_width="match_parent"
