--- a/app/src/main/res/layout/fragment_beverage_database.xml
+++ b/app/src/main/res/layout/fragment_beverage_database.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.recyclerview.widget.RecyclerView
+        <cz.johnyapps.cheers.views.EmptyMessageRecyclerView
             android:id="@+id/beveragesRecyclerView"
             app:emptyMessage="@string/beverage_recycler_view_empty_message"
             android:layout_width="match_parent"
