--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -1,40 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="?spacingDefault">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <cz.johnyapps.cheers.views.graphview.GraphView
-        android:id="@+id/graphView"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:valueSuffix="@string/milliliter"
-        android:layout_marginBottom="?spacingDefault"
-        android:layout_above="@id/valueEditLayout"
-        android:padding="?spacingDefault" />
-
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/valueEditLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:orientation="vertical"
         android:padding="?spacingDefault">
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/beverageNameTextView"
+        <cz.johnyapps.cheers.views.graphview.GraphView
+            android:id="@+id/graphView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            app:valueSuffix="@string/milliliter"
             android:layout_marginBottom="?spacingDefault"
-            android:textAppearance="@style/TextAppearance.Cheers.Small" />
+            android:layout_above="@id/valueEditLayout"
+            app:graphValueSets="@{viewModel.counters}"
+            app:onValueClick="@{viewModel::setSetAndValue}"
+            android:padding="?spacingDefault" />
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/timeTextView"
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/valueEditLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="@style/TextAppearance.Cheers.Large"
-            android:gravity="center" />
-    </androidx.appcompat.widget.LinearLayoutCompat>
-</RelativeLayout>
+            android:layout_alignParentBottom="true"
+            android:orientation="vertical"
+            app:graphValueSet="@{viewModel.selectedGraphValueSet}"
+            app:graphValue="@{viewModel.selectedGraphValue}"
+            android:padding="?spacingDefault">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/beverageNameTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="?spacingDefault"
+                android:textAppearance="@style/TextAppearance.Cheers.Small" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/timeTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/TextAppearance.Cheers.Large"
+                android:gravity="center" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
+    </RelativeLayout>
+
+    <data>
+        <variable
+            name="viewModel"
+            type="cz.johnyapps.cheers.viewmodels.StatisticsViewModel" />
+    </data>
+</layout>
