--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:id="@+id/main_drawer"
     tools:context=".activities.MainActivity">
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -20,17 +20,19 @@
             app:titleTextColor="?colorOnToolbar"
             app:contentInsetStartWithNavigation="0dp"
             app:subtitleTextColor="?colorOnToolbar"
+            app:layout_constraintTop_toTopOf="parent"
             android:background="?colorToolbar" />
 
         <fragment
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:id="@+id/nav_host_fragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/toolbar"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:defaultNavHost="true"
-            android:layout_below="@id/toolbar"
             app:navGraph="@navigation/nav_graph" />
-    </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
