--- a/app/src/main/res/layout/dialog_about_app.xml
+++ b/app/src/main/res/layout/dialog_about_app.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <androidx.appcompat.widget.AppCompatTextView
+    <TextView
+        android:id="@+id/authorTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="@style/TextAppearance.Cheers.Small"
         android:padding="?spacingDefault"
+        app:layout_constraintTop_toTopOf="parent"
         android:text="@string/about_app_author" />
 
-    <androidx.appcompat.widget.AppCompatTextView
+    <TextView
         android:id="@+id/versionTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -19,9 +22,10 @@
         android:paddingStart="?spacingDefault"
         android:paddingEnd="?spacingDefault"
         android:paddingBottom="?spacingDefault"
+        app:layout_constraintTop_toBottomOf="@id/authorTextView"
         android:text="@string/about_app_build" />
 
-    <androidx.appcompat.widget.AppCompatTextView
+    <TextView
         android:id="@+id/buildTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -29,14 +33,16 @@
         android:paddingStart="?spacingDefault"
         android:paddingEnd="?spacingDefault"
         android:paddingBottom="?spacingDefault"
+        app:layout_constraintTop_toBottomOf="@id/versionTextView"
         android:text="@string/about_app_version" />
 
-    <androidx.appcompat.widget.AppCompatTextView
+    <TextView
         android:id="@+id/buildTimeTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="@style/TextAppearance.Cheers.Small"
         android:paddingStart="?spacingDefault"
         android:paddingEnd="?spacingDefault"
+        app:layout_constraintTop_toBottomOf="@id/buildTextView"
         android:text="@string/about_app_version" />
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
