--- a/app/src/main/res/layout/dialog_edit_beverage.xml
+++ b/app/src/main/res/layout/dialog_edit_beverage.xml
@@ -1,52 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:padding="20dp">
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/nameEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="?spacingDefault"
         android:hint="@string/dialog_new_counter_name"
         android:maxLines="1"
         android:inputType="text"
+        app:layout_constraintTop_toTopOf="parent"
         android:textAppearance="@style/TextAppearance.Cheers.Medium" />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
+    <View
+        android:id="@+id/colorView"
+        android:layout_width="78dp"
+        android:layout_height="78dp"
+        android:layout_marginTop="?spacingDefault"
+        app:layout_constraintTop_toBottomOf="@id/nameEditText"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/alcoholEditText"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical">
+        android:layout_marginEnd="?spacingDefault"
+        android:hint="@string/dialog_new_counter_alcohol"
+        android:inputType="numberSigned|number|numberDecimal"
+        app:layout_constraintTop_toTopOf="@id/colorView"
+        app:layout_constraintBottom_toBottomOf="@id/colorView"
+        app:layout_constraintStart_toEndOf="@id/colorView"
+        app:layout_constraintEnd_toStartOf="@id/percentTextView"
+        android:maxLines="1"
+        android:layout_marginStart="?spacingDefault"
+        android:textAppearance="@style/TextAppearance.Cheers.Medium" />
 
-        <View
-            android:id="@+id/colorView"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginEnd="?spacingDefault" />
-
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/alcoholEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="?spacingDefault"
-            android:hint="@string/dialog_new_counter_alcohol"
-            android:inputType="numberSigned|number|numberDecimal"
-            android:layout_toEndOf="@id/colorView"
-            android:layout_toStartOf="@id/percentTextView"
-            android:layout_centerVertical="true"
-            android:maxLines="1"
-            android:textAppearance="@style/TextAppearance.Cheers.Medium" />
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/percentTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/percent"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:textAppearance="@style/TextAppearance.Cheers.Medium" />
-    </RelativeLayout>
-</LinearLayout>
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/percentTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/percent"
+        app:layout_constraintTop_toTopOf="@id/alcoholEditText"
+        app:layout_constraintBottom_toBottomOf="@id/alcoholEditText"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:textAppearance="@style/TextAppearance.Cheers.Medium" />
+</androidx.constraintlayout.widget.ConstraintLayout>
