--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="?spacingDefault">
@@ -10,41 +11,45 @@
         <cz.johnyapps.cheers.views.graphview.GraphView
             android:id="@+id/graphView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             app:valueSuffix="@string/milliliter"
             android:layout_marginBottom="?spacingDefault"
             android:layout_above="@id/valueEditLayout"
             app:graphValueSets="@{viewModel.counters}"
             app:onValueClick="@{viewModel::setSetAndValue}"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/valueEditLayout"
             android:padding="?spacingDefault" />
 
-        <androidx.appcompat.widget.LinearLayoutCompat
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/valueEditLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:orientation="vertical"
-            app:graphValueSet="@{viewModel.selectedGraphValueSet}"
+            android:padding="?spacingDefault"
             app:graphValue="@{viewModel.selectedGraphValue}"
-            android:padding="?spacingDefault">
+            app:graphValueSet="@{viewModel.selectedGraphValueSet}"
+            app:layout_constraintBottom_toBottomOf="parent">
 
-            <androidx.appcompat.widget.AppCompatTextView
+            <TextView
                 android:id="@+id/beverageNameTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="?spacingDefault"
                 android:text="@string/beverage_name_text_view"
-                android:textAppearance="@style/TextAppearance.Cheers.Small" />
+                android:textAppearance="@style/TextAppearance.Cheers.Small"
+                app:layout_constraintBottom_toTopOf="@id/timeTextView" />
 
-            <androidx.appcompat.widget.AppCompatTextView
+            <TextView
                 android:id="@+id/timeTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAppearance="@style/TextAppearance.Cheers.Large"
+                android:gravity="center"
                 android:text="@string/time_text_view_empty"
-                android:gravity="center" />
-        </androidx.appcompat.widget.LinearLayoutCompat>
-    </RelativeLayout>
+                android:textAppearance="@style/TextAppearance.Cheers.Large"
+                app:layout_anchor="@+id/beverageNameTextView"
+                app:layout_constraintBottom_toBottomOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <data>
         <variable
