--- a/app/src/main/res/layout/item_beverage.xml
+++ b/app/src/main/res/layout/item_beverage.xml
@@ -1,44 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.appcompat.widget.LinearLayoutCompat
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clickable="true"
         android:focusable="true"
         android:orientation="vertical"
         android:animateLayoutChanges="true"
+        android:layout_marginBottom="1dp"
         android:background="?selectableItemBackground">
 
-        <androidx.appcompat.widget.AppCompatTextView
+        <TextView
             android:id="@+id/nameTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="20dp"
+            app:layout_constraintTop_toTopOf="parent"
             android:text="@{beverage.name}"
             android:textAppearance="@style/TextAppearance.Cheers.Medium" />
 
-        <androidx.appcompat.widget.LinearLayoutCompat
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:id="@+id/descriptionLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="?spacingDefault"
+            app:layout_constraintTop_toBottomOf="@id/nameTextView"
             android:visibility="gone"
+            android:layout_marginBottom="1dp"
             android:background="?colorSurface">
 
-            <androidx.appcompat.widget.AppCompatTextView
+            <TextView
                 android:id="@+id/descriptionTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/description_text_view_loading"
                 android:textAppearance="@style/TextAppearance.Cheers.Small" />
-        </androidx.appcompat.widget.LinearLayoutCompat>
+        </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="1dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:background="?colorOnSurface" />
-    </androidx.appcompat.widget.LinearLayoutCompat>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <data>
         <import type="android.view.View" />
