--- a/app/src/main/res/layout/item_item_with_id.xml
+++ b/app/src/main/res/layout/item_item_with_id.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,13 +12,14 @@
         android:id="@+id/nameTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
         android:padding="20dp"
         android:textAppearance="@style/TextAppearance.Cheers.Small" />
 
-    <LinearLayout
+    <View
         android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@id/nameTextView"
         android:background="?colorOnSurface" />
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
