--- a/app/src/main/res/layout/nav_menu_header.xml
+++ b/app/src/main/res/layout/nav_menu_header.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="144dp"
@@ -12,6 +13,7 @@
         android:text="@string/app_name"
         android:textColor="?colorOnPrimary"
         android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent"
         android:textAppearance="@style/TextAppearance.Cheers.Medium" />
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -21,6 +23,6 @@
         android:text="@string/menu_header_text"
         android:textColor="?colorOnPrimary"
         android:textStyle="bold"
-        android:layout_alignParentBottom="true"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:textAppearance="@style/TextAppearance.Cheers.Medium" />
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
