--- a/app/src/main/res/layout/view_counter.xml
+++ b/app/src/main/res/layout/view_counter.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -10,64 +10,80 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="?spacingDefault"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:cardElevation="5dp">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <androidx.appcompat.widget.AppCompatTextView
+            <TextView
                 android:id="@+id/nameTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/TextAppearance.Cheers.Small"
+                app:layout_constraintTop_toTopOf="parent"
                 android:padding="?spacingDefault" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/minusTextView"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:orientation="horizontal">
+                android:textAppearance="@style/TextAppearance.Cheers.Large"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:background="?selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:padding="?spacingDefault"
+                app:layout_constraintTop_toBottomOf="@id/nameTextView"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/guidelineStart"
+                android:text="@string/minus" />
 
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/minusTextView"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="@style/TextAppearance.Cheers.Large"
-                    android:layout_weight="2"
-                    android:gravity="center"
-                    android:textStyle="bold"
-                    android:background="?selectableItemBackground"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:padding="?spacingDefault"
-                    android:text="@string/minus" />
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guidelineStart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.30" />
 
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/valueTextView"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="@style/TextAppearance.Cheers.Large"
-                    android:layout_weight="3"
-                    android:gravity="center"
-                    android:padding="?spacingDefault"
-                    android:text="0" />
+            <TextView
+                android:id="@+id/valueTextView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/TextAppearance.Cheers.Large"
+                android:gravity="center"
+                android:padding="?spacingDefault"
+                app:layout_constraintTop_toTopOf="@id/minusTextView"
+                app:layout_constraintStart_toEndOf="@id/guidelineStart"
+                app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
+                android:text="0" />
 
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/plusTextView"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="@style/TextAppearance.Cheers.Large"
-                    android:layout_weight="2"
-                    android:gravity="center"
-                    android:textStyle="bold"
-                    android:background="?selectableItemBackground"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:padding="?spacingDefault"
-                    android:text="@string/plus" />
-            </LinearLayout>
-        </LinearLayout>
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guidelineEnd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.70" />
+
+            <TextView
+                android:id="@+id/plusTextView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/TextAppearance.Cheers.Large"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:background="?selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:padding="?spacingDefault"
+                app:layout_constraintTop_toTopOf="@id/valueTextView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@id/guidelineEnd"
+                android:text="@string/plus" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
