--- a/app/src/main/res/layout/view_large_header.xml
+++ b/app/src/main/res/layout/view_large_header.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,13 +7,15 @@
     android:background="?colorPrimaryVariant"
     android:paddingTop="?spacingDefault">
 
-    <androidx.appcompat.widget.AppCompatImageView
+    <ImageView
         android:layout_width="match_parent"
         android:layout_height="100dp"
         app:srcCompat="@mipmap/ic_launcher"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/titleTextView"
         android:scaleType="fitCenter" />
 
-    <androidx.appcompat.widget.AppCompatTextView
+    <TextView
         android:id="@+id/titleTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -21,8 +23,9 @@
         android:gravity="center"
         android:textStyle="bold"
         android:textAppearance="@style/TextAppearance.Cheers.Medium"
-        android:paddingStart="?spacingDefault"
-        android:paddingEnd="?spacingDefault"
-        android:text="@string/app_name"
-        android:paddingBottom="?spacingDefault" />
-</LinearLayout>
+        android:layout_marginStart="?spacingDefault"
+        android:layout_marginEnd="?spacingDefault"
+        android:layout_marginBottom="?spacingDefault"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/app_name" />
+</androidx.constraintlayout.widget.ConstraintLayout>
